--- a/ASE_Revision_Saltos_V2.Rmd
+++ b/ASE_Revision_Saltos_V2.Rmd
@@ -6,8 +6,8 @@ output: pdf_document
 ---
 ```{r}
 library(haven)
-ASE_Intento_V3 <- 
-  read_sav("C:/Users/Alejandro/Dropbox/PULSO_Proyecto_AECID/ASE_Intento_V3.sav")
+ASE_Intento_V4 <- 
+  read_sav("C:/Users/Alejandro/Dropbox/PULSO_Proyecto_AECID/ASE_Intento_V4.sav")
 ```
 
 # Hallazgos Principales
@@ -25,7 +25,7 @@ ASE_Intento_V3 <-
 ## Salto 1: Aceptar ser parte en la investigación
 ```{r}
 #Resumen de la cantidad de observaciones de las variables, según opción
-table(ASE_Intento_V3$P2_1)
+table(ASE_Intento_V4$P2_1)
 ```
 El output indica que todos los casos fueron personas que aceptaron participar.
 
@@ -33,7 +33,7 @@ El output indica que todos los casos fueron personas que aceptaron participar.
 ## Salto 2: Ser peruano y vivir en la vivienda
 ```{r}
 #Resumen de la cantidad de observaciones de las variables, según opción
-table(ASE_Intento_V3$P8_1)
+table(ASE_Intento_V4$P8_1)
 ```
 El output indica que todos los casos son de peruanos que viven en la vivienda consignada al momento de la llamada.
 
@@ -41,7 +41,7 @@ El output indica que todos los casos son de peruanos que viven en la vivienda co
 ## Salto 3: Ser mayor de edad y tener hasta 70 años
 ```{r}
 #Resumen de la cantidad de observaciones de las variables, según opción
-table(ASE_Intento_V3$P9_1)
+table(ASE_Intento_V4$P9_1)
 ```
 El output indica que todos los casos son de personas mayores de edad hastas los 70 años.
 
@@ -52,21 +52,27 @@ El output indica que todos los casos son de personas mayores de edad hastas los 
 ### Pregunta(s) omitidas(s) por el Salto: 16 (variables P107_1 y P107_2)
 ```{r}
 #Resumen de la cantidad de observaciones de las variables, según opción
-table(ASE_Intento_V3$P104_1, useNA = "ifany")
-table(ASE_Intento_V3$P105_1, useNA = "ifany")
-table(ASE_Intento_V3$P106_1, useNA = "ifany")
+table(ASE_Intento_V4$P104_1, useNA = "ifany")
+table(ASE_Intento_V4$P105_1, useNA = "ifany")
+table(ASE_Intento_V4$P106_1, useNA = "ifany")
 
-ASE_Intento_V3$VotoxMujer <- ifelse(ASE_Intento_V3$P104_1 == 1 | 
-                                      ASE_Intento_V3$P105_1 == 1 | 
-                                      ASE_Intento_V3$P106_1 == 1, 1, 0)
+ASE_Intento_V4$VotoxMujer <- ifelse(ASE_Intento_V4$P104_1 == 1 | 
+                                      ASE_Intento_V4$P105_1 == 1 | 
+                                      ASE_Intento_V4$P106_1 == 1, 1, 0)
+table(ASE_Intento_V4$VotoxMujer)
 
-table(ASE_Intento_V3[with(ASE_Intento_V3, VotoxMujer == 1),]$P107_1, useNA = "ifany")
-table(ASE_Intento_V3[with(ASE_Intento_V3, VotoxMujer == 1),]$P107_2, useNA = "ifany")
+table(ASE_Intento_V4[with(ASE_Intento_V4, VotoxMujer == 1),]$P107_1, useNA = "ifany")
+table(ASE_Intento_V4[with(ASE_Intento_V4, VotoxMujer == 1),]$P107_2, useNA = "ifany")
 ```
 A pesar de que la encuesta indica que los "no sabe" y los "no contesta" se codifican como 8 y 9 respectivamente, no encontramos estos valores en la data para las variables P104_1, P105_1 y P106_1. En ves de esto encontramos varias observaciones con el valor 3, debido a la recodificación. 
 
 Por otro lado, a pesar de que marcar con 1 en cualquiera de las tres variables anteriores supone un salto de la pregunta 16 (variables P171_1 y P171_2), tenemos 27 casos que marcaron opciones para la P171_1 y otros 12 casos para la variable P171_2.
 
+```{r}
+ASE_Intento_V4$P107_1[ASE_Intento_V4$VotoxMujer == 1] <- NA
+ASE_Intento_V4$P107_2[ASE_Intento_V4$VotoxMujer == 1] <- NA
+```
+Debido a que había casos colados en la pregunta afectada por el salto, procedimos a eliminar los datos y cambiarlos por NA. Esto será agregado al código principal del informe, ya que de ahí sale la base de datos que se comparte al cliente.
 
 ## Salto 5: No haber recibido amenazas en redes
 ### Pregunta de Salto: 33 (variables desde P172_1 a P181_1 )
@@ -74,33 +80,33 @@ Por otro lado, a pesar de que marcar con 1 en cualquiera de las tres variables a
 ### Pregunta(s) omitidas(s) por el Salto: 34 (desde P183_1 a la P183_3)
 ```{r}
 #Resumen de la cantidad de observaciones de las variables, según opción
-table(ASE_Intento_V3$P172_1, useNA = "ifany")
-table(ASE_Intento_V3$P173_1, useNA = "ifany")
-table(ASE_Intento_V3$P174_1, useNA = "ifany")
-table(ASE_Intento_V3$P175_1, useNA = "ifany")
-table(ASE_Intento_V3$P176_1, useNA = "ifany")
-table(ASE_Intento_V3$P177_1, useNA = "ifany")
-table(ASE_Intento_V3$P178_1, useNA = "ifany")
-table(ASE_Intento_V3$P179_1, useNA = "ifany")
-table(ASE_Intento_V3$P180_1, useNA = "ifany")
-table(ASE_Intento_V3$P181_1, useNA = "ifany")
+table(ASE_Intento_V4$P172_1, useNA = "ifany")
+table(ASE_Intento_V4$P173_1, useNA = "ifany")
+table(ASE_Intento_V4$P174_1, useNA = "ifany")
+table(ASE_Intento_V4$P175_1, useNA = "ifany")
+table(ASE_Intento_V4$P176_1, useNA = "ifany")
+table(ASE_Intento_V4$P177_1, useNA = "ifany")
+table(ASE_Intento_V4$P178_1, useNA = "ifany")
+table(ASE_Intento_V4$P179_1, useNA = "ifany")
+table(ASE_Intento_V4$P180_1, useNA = "ifany")
+table(ASE_Intento_V4$P181_1, useNA = "ifany")
 
 
-ASE_Intento_V3$nv_Redes <- ifelse(ASE_Intento_V3$P172_1 == 2 & 
-                                    ASE_Intento_V3$P173_1 == 2 & 
-                                    ASE_Intento_V3$P174_1 == 2 & 
-                                    ASE_Intento_V3$P175_1 == 2 & 
-                                    ASE_Intento_V3$P176_1 == 2 & 
-                                    ASE_Intento_V3$P177_1 == 2 & 
-                                    ASE_Intento_V3$P178_1 == 2 & 
-                                    ASE_Intento_V3$P179_1 == 2 & 
-                                    ASE_Intento_V3$P180_1 == 2 & 
-                                    ASE_Intento_V3$P181_1 == 2, 1, 0)
+ASE_Intento_V4$nv_Redes <- ifelse(ASE_Intento_V4$P172_1 == 2 & 
+                                    ASE_Intento_V4$P173_1 == 2 & 
+                                    ASE_Intento_V4$P174_1 == 2 & 
+                                    ASE_Intento_V4$P175_1 == 2 & 
+                                    ASE_Intento_V4$P176_1 == 2 & 
+                                    ASE_Intento_V4$P177_1 == 2 & 
+                                    ASE_Intento_V4$P178_1 == 2 & 
+                                    ASE_Intento_V4$P179_1 == 2 & 
+                                    ASE_Intento_V4$P180_1 == 2 & 
+                                    ASE_Intento_V4$P181_1 == 2, 1, 0)
 
 
-table(ASE_Intento_V3[with(ASE_Intento_V3, nv_Redes == 1),]$P183_1, useNA = "ifany")
-table(ASE_Intento_V3[with(ASE_Intento_V3, nv_Redes == 1),]$P183_2, useNA = "ifany")
-table(ASE_Intento_V3[with(ASE_Intento_V3, nv_Redes == 1),]$P183_3, useNA = "ifany")
+table(ASE_Intento_V4[with(ASE_Intento_V4, nv_Redes == 1),]$P183_1, useNA = "ifany")
+table(ASE_Intento_V4[with(ASE_Intento_V4, nv_Redes == 1),]$P183_2, useNA = "ifany")
+table(ASE_Intento_V4[with(ASE_Intento_V4, nv_Redes == 1),]$P183_3, useNA = "ifany")
 ```
 Para cada una de las diez varaibles que conforman la pregunta 33 (de la variable P172_1 a la 181_1), no encontramos ningun caso con valores 8 u 9, correspondiente a "no sabe" y "no contesta", sino valores 3, que representa la etiqueta "NS/NR". Esto debido a la recodificación.
 
@@ -112,7 +118,7 @@ Encontramos que todos los valores de la pregunta 34 (variable P183_1) son NA cua
 ### Saltar si: El valor de pregunta 42 es 1 o 2
 ### Pregunta(s) omitidas(s) por el Salto: 43 y 44 (variables P192_1 y P193_1)
 ```{r}
-table(ASE_Intento_V3[with(ASE_Intento_V3, P191_1 == 1 | P191_1 == 2),]$P192_1, useNA = "ifany")
-table(ASE_Intento_V3[with(ASE_Intento_V3, P191_1 == 1 | P191_1 == 2),]$P193_1, useNA = "ifany")
+table(ASE_Intento_V4[with(ASE_Intento_V4, P191_1 == 1 | P191_1 == 2),]$P192_1, useNA = "ifany")
+table(ASE_Intento_V4[with(ASE_Intento_V4, P191_1 == 1 | P191_1 == 2),]$P193_1, useNA = "ifany")
 ```
 Encontramos que cuando la pregunta 32 (variable 191_1) tiene el valor de 1 o 2, las preguntas 43 y 44 (variables 192_3 y 192_4) presentan 620 casos de valores 7 y 8, correspondientemente. Estos valores representan en cada caso, la etiqueta "NS/NR". Es decir, que se respeta el saldo cuando la persona entrevistada es la persona que aporta más en el hogar.
